--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
-title: <h2>"Nikki Columbus"</h2> # the name of your site, e.g. ACME Corp.
+title: <h2>Nikki Columbus</h2> # the name of your site, e.g. ACME Corp.
